chore: fix scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+*{
+  overflow: hidden;
+}
 .App {
   text-align: center;
 }
@@ -16,5 +19,4 @@
 canvas {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
